--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "socket.io-client": "^4.8.0",
+    "uuid": "^8.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
