--- a/server/vercel.json
+++ b/server/vercel.json
@@ -3,7 +3,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "./index.js",
+      "src": "./server.js",
       "use": "@vercel/node"
     }
   ],
